--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "material-ui": "^0.19.2",
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
+    "react-mailto": "^0.4.0",
     "react-scripts": "1.0.13",
     "react-svg-logos": "^1.0.1"
   },
