--- a/package.json
+++ b/package.json
@@ -3,12 +3,13 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "lodash": "^4.17.4",
     "material-ui": "^0.19.2",
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
+    "react-konami": "^0.4.0",
     "react-mailto": "^0.4.0",
-    "react-scripts": "1.0.13",
-    "react-svg-logos": "^1.0.1"
+    "react-scripts": "1.0.13"
   },
   "scripts": {
     "start": "react-scripts start",
